[package]
name = "creat_gitignore"
version = "0.1.3"
edition = "2021"
authors = ["syfangjie@live.cn"]
description = "Help generate.gitignore Command line tools."
license = "MIT OR Apache-2.0"
repository = "https://github.com/MikuSugar/creat_gitignore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "src/main.rs"
name = 'cgi'

[dependencies]
clap = "2.33.0"
